--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,13 +23,17 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
 
-    implementation 'com.google.firebase:firebase-core:16.0.6'
-    implementation 'com.google.firebase:firebase-database:16.0.5'
-    implementation 'com.google.firebase:firebase-storage:16.0.5'
-    implementation 'com.google.firebase:firebase-auth:16.1.0'
-    implementation 'com.google.firebase:firebase-messaging:17.3.4'
-    implementation 'com.google.firebase:firebase-functions:16.1.3'
-   // implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
+   // implementation 'com.google.firebase:firebase-core:16.0.6'
+   // implementation 'com.google.firebase:firebase-database:16.0.5'
+    //implementation 'com.google.firebase:firebase-storage:16.0.5'
+   // implementation 'com.google.firebase:firebase-auth:16.1.0'
+
+    //implementation 'com.google.firebase:firebase-messaging:17.3.4'
+
+    //implementation 'com.google.firebase:firebase-functions:16.1.3'
+
+    //implementation 'com.google.firebase:firebase-auth:18.0.0'
+    //implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
@@ -38,6 +42,14 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    implementation 'com.google.firebase:firebase-storage:18.0.0'
+    implementation 'com.google.firebase:firebase-auth:18.0.0'
+    implementation 'com.google.firebase:firebase-functions:18.0.0'
+    implementation 'com.google.firebase:firebase-database:18.0.0'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
